# schema-audit

./: .gitignore  README.md
core/: .npmignore  CHANGELOG.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
core/bench/: BASELINE.md  bench-corpus.js  bench-jsonld-product.js
core/registry/: schema-types.json
core/scripts/: regen-corpus-snapshots.mjs  run-tests.js
core/src/: cli.ts  curated-rules.ts  errors.ts  index.ts  registry.ts  types.ts
core/tests/: cli.test.ts  conformance.test.ts  corpus.test.ts  curated-rules.test.ts  google-truth.json  google-truth.test.ts  registry-sync.test.ts  registry.test.ts  validate-jsonld-layer-2.test.ts  validate-jsonld-multi-type.test.ts  validate-jsonld-product.test.ts  validate-microdata.test.ts  validate-rdfa.test.ts
examples/: README.md
examples/ai-agent-tool/: tool.js  tool.py
examples/cms-validator-hook/: hook.js  hook.py
examples/monitor/: monitor.js  monitor.py
examples/page-auditor/: auditor.js  auditor.py
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/src/schema_audit/: __init__.py  _detector.py  _html.py  _microdata_extractor.py  _per_item.py  _rdfa_extractor.py  _render.py  cli.py  curated_rules.py  errors.py  registry.py  types.py
python/src/schema_audit/_data/: curated-rules.json  schema-types.json
python/src/schema_audit/rules/: __init__.py  validate_context.py  validate_property_existence.py  validate_property_value_type.py  validate_recommended.py  validate_required.py  validate_type.py  validate_url.py
python/src/schema_audit/validators/: __init__.py  jsonld.py  microdata.py  rdfa.py
python/tests/: conftest.py  test__html.py  test__render.py  test_cli.py  test_conformance.py  test_detect.py  test_jsonld.py  test_microdata.py  test_public_api.py  test_rdfa.py  test_unsupported_format.py  test_validate_context.py  test_validate_property_existence.py  test_validate_property_value_type.py  test_validate_recommended.py  test_validate_required.py  test_validate_type.py  test_validate_url.py
python/tests/fixtures/invalid/: insecure-context.json  invalid-url.json  microdata-missing-itemtype.html  microdata-no-itemscope.html  missing-type.json  nonstandard-context.json  product-missing-recommended-brand.json  rdfa-unknown-type.html  unknown-property.json  unknown-type.json
python/tests/fixtures/valid/: article-full-recommended.json  blog-posting.json  microdata-product.html  minimal-product.json  news-article.json  product-with-inherited-props.json  rdfa-product.html
scripts/: build-registry.mjs  bump-version.mjs  cycle1-types.json  regen-conformance.mjs  source-types.json  sync-schema.mjs
tests/conformance/: README.md  blog-posting.golden.json  blog-posting.input.json  insecure-context.golden.json  insecure-context.input.json  invalid-product-oneof.golden.json  (+25 more)
(+85 files in other folders)
