[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "schema-audit"
description = "Programmatic schema-markup validation engine for JSON-LD, Microdata, and RDFa. Mirrors schema.org structural rules and Google Rich Results eligibility checks. Stdlib-only."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "../LICENSE" }
keywords = ["schema.org", "json-ld", "microdata", "rdfa", "structured-data", "seo", "validation", "rich-results"]
authors = [{ name = "wahajmasood" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/wahajmasood/schema-audit"
Source = "https://github.com/wahajmasood/schema-audit"
Issues = "https://github.com/wahajmasood/schema-audit/issues"

[tool.hatch.version]
path = "src/schema_audit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/schema_audit"]

[tool.hatch.build.targets.wheel.force-include]
"src/schema_audit/_data/schema-types.json" = "schema_audit/_data/schema-types.json"
"src/schema_audit/_data/curated-rules.json" = "schema_audit/_data/curated-rules.json"

[tool.hatch.build.targets.sdist]
include = [
  "src/schema_audit",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length — ruff format handles this
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
files = ["src/schema_audit"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
